Changes that may break existing programs are marked using a star *.

Version 1.2.0
=============

Melt tool
- Add -latex file.tex option to Mlpost to compute prelude, if the tex file
already exists.

Version 1.1.0
=============

Configuration:
- Replaced the configuration tool by a more powerful one using Totoconf

Melt tool:
- -classic-display option
- Added the latop tool to parse LaTeX output and re-print it prettier and with
less trash (for now it is more or less deactivated though)

Preprocessor:
- \" in comments become " to stop the OCaml compiler from complaining about
a string litteral not terminated in a comment.
- $, " and { didn't work as verbatim delimiters and now a parse error is printed
- Errors are now printed as "Melt parse error" instead of just "Parse error"
- Underscores (_) are now accepted in verbatim function names

Latex and Melt library:
- Latex.Verbatim.pseudocode (and Melt.Verbatim.pseudocode)
* Bugfix: ~packages argument of commands and environment are now taken into
account even if the command is used deep inside the AST
* Bugfix: Melt.convert now forces math or text mode for `M and `T
- Latex.size type enhanced with more sizes
- Reorganized the interface and its documentation

Latex and Melt library (smaller features):
* inferrule_ replaced by inferrule, which has many new options
- parbox, minipage, center
- hspace
- bot
- textrm, textsf, mathcal
- newline_size
- Verbatim.trim, trim_end and trim_begin
- Verbatim.split_lines
- listoffigures, listoftables
- many more font size commands
- llbracket, rrbracket (package stmaryrd)
- box_

Version 1.0.1
=============

- Melt compiles with Ocamlbuild 3.10.0 even with the main Makefile.
- All combinations of -no-mlpost or -no-ocamlbuild options should work.
You still have to add "-I +mlpost" yourself if you compiled Melt with Mlpost
but use the -no-mlpost option.
- The -no-mlpost option is set by default if Melt was compiled without Mlpost.